--- a/module/Account/view/account/account/index.phtml
+++ b/module/Account/view/account/account/index.phtml
@@ -1,5 +1,5 @@
 <?php 
-$title = 'My accounts';
+$title = 'Webflix Accounts';
  $this->headTitle($title);
  ?>
  <h1><?php echo $this->escapeHtml($title); ?></h1>
