--- a/css/general.css
+++ b/css/general.css
@@ -21,7 +21,14 @@ input.text
 }
 #account
 {
- width: 500px;  
+ width: 800px;  
  margin-left: 100px;      
+}
+.note-label
+{
+    text-align: left;
+    color: red;
+    padding-left:10px;
+    font-family: Times Roman;
 }
 
