--- a/module/Movie/view/movie/movie/index.phtml
+++ b/module/Movie/view/movie/movie/index.phtml
@@ -1,5 +1,5 @@
 <?php 
-$title = 'My Movies';
+$title = 'Select movies';
  $this->headTitle($title);
  ?> 
  <h1><?php echo $this->escapeHtml($title); ?></h1>
