--- a/module/Movie/view/movie/movie/index.phtml
+++ b/module/Movie/view/movie/movie/index.phtml
@@ -11,7 +11,7 @@ $title = 'Select movies';
  <tr>
      <th>Title</th>
      <th>Year</th>
-     <th>&nbsp;</th>
+     <th>Price</th>
  </tr>
  <?php   
    $form->setAttribute('action', $this->url('account', array('action' => 'edit', 'id' => $account_id)));     
@@ -25,17 +25,13 @@ $title = 'Select movies';
  
  <tr> 
      <td><?php echo $this->escapeHtml($movie->title);?></td>
-     <td><?php echo $this->escapeHtml($movie->year);?></td>    
+     <td><?php echo $this->escapeHtml($movie->year);?></td>  
+     <td><?php echo $this->escapeHtml('$'.number_format($movie->price,2,'.',','));?></td>
      <td><?php echo $this->formRow($form->get('selected_'.$i));
-      echo $this->formRow($form->get('movie_id_'.$i)->setValue($movie->id));  
-     
+      echo $this->formRow($form->get('movie_id_'.$i)->setValue($movie->id)); 
+      echo $this->formRow($form->get('price_'.$i)->setValue($movie->price));     
       ?></td>  
-     <!--<td>
-         <a href="<?php //cho $this->url('movie',
-             //array('action'=>'edit', 'id' => $movie->id));?>">Edit</a>
-         <a href="<?php //echo $this->url('movie',
-             //array('action'=>'delete', 'id' => $movie->id));?>">Delete</a>
-     </td> -->
+    
  </tr>
  <?php $i++; 
   endforeach; ?>  
